# maths-extended

./: README.md  maths-extended.cabal
src/Data/Histogram/: Util.hs
src/Math/: Util.hs
src/Statistics/Distribution/: Combo.hs  Laplace.hs
