name: maths-extended
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/maths-extended/issues
synopsis: Haskell project maths-extended repo 
description: <https://github.com/tonyday567/maths-extended>
extra-source-files:
    README.md

library
  exposed-modules:      Statistics.Distribution.Combo
                      , Data.Histogram.Util
                      , Math.Util
                      , Statistics.Distribution.Laplace
     
  build-depends:       base == 4.*
                     , foldl 
                     , histogram-fill 
                     , mwc-random 
                     , primitive 
                     , statistics 
                     , vector 

  hs-source-dirs:      src      
  default-language:    Haskell2010